[package]
name = "pkcs10-fuzz"
version = "0.0.0"
authors = ["RustCrypto Developers"]
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
pkcs10 = { path = ".." }

# Prevents this crate from interfering with the workspace
[workspace]
members = ["."]
